--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <link rel="stylesheet" href="static/css/style.css">
     </title>
 </head>
-<body>
+<body class="bg-dark">
    <div class="wrapper">
-       <nav class="navbar navbar-expand-lg">
+       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
            <a class="navbar-brand" href="index.html">UFO Sightings</a>
        </nav>
        <div class="jumbotron">
-           <h1>The Truth is Out There</h1> 
+           <h1 class="display-4"> The Truth is Out There!</h1> 
        </div>
        <div class="container-fluid">
            <div class="row">
                <div class="col-md-4">
-                   <h3>UFO Sightings: Fact or Fancy?<small>Ufologists Weigh In</small></h3>
+                   <h3> UFO Sightings: Fact or Fancy?<small> Ufologists Weigh In</small></h3>
                </div>
                     <div class="col-md-8">
                         <p>
@@ -43,16 +43,28 @@ So what do YOU think? Are we alone in the universe? Are aliens trying to contact
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
-                    <form>
+                    <form class="bg-dark">
                         <p>Filter Search</p>
-                        <ul class="list-group">
-                            <li class="list-group-item">
+                        <ul class="list-group bg-dark">
+                            <li class="list-group-item" style="font-family: inherit; font-size: 1rem;">
                                 <label for="date"> Enter Date</label>
                                 <input type="text" placeholder="1/1/2010" id="datetime"/>
                             </li>
-                            <li class="list-group-item">
-                                <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
-
+                            <li class="list-group-item" style="font-family: inherit; font-size: 1rem;">
+                                <label for="city">Enter City</label>
+                                <input type="text" placeholder="benton" id="city"/>
+                            </li>
+                            <li class="list-group-item" style="font-family: inherit; font-size: 1rem;">
+                                <label for="state">Enter State</label>
+                                <input type="text" placeholder="ar" id="state"/>
+                            </li>
+                                <li class="list-group-item" style="font-family: inherit; font-size: 1rem;">
+                                <label for="country">Enter Country</label>
+                                <input type="text" placeholder="us" id="country"/>
+                            </li>
+                            <li class="list-group-item" style="font-family: inherit; font-size: 1rem;">
+                                <label for="shape">Enter shape type</label>
+                                <input type="text" placeholder="circle" id="shape"/>
                             </li>
                         </ul>
                     </form>
@@ -76,5 +88,8 @@ So what do YOU think? Are we alone in the universe? Are aliens trying to contact
             </div>
         </div>
    </div>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+  <script src="static/js/data.js"></script>
+  <script src="static/js/app.js"></script>
 </body>
 </html>
